--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h1>Multiple Choice Questionnaire</h1>
     <form action="/submit" method="post">
         <div>
-            <p>Question 1: Evet Hayır oyunu oynayacağız sadece bir kere evet veya hayır deme hakkın var. Hazır mısın?</p>
-            <input type="radio" id="q1a" name="answer1" value="evet">
-            <label for="q1a">a) evet</label><br>
-            <input type="radio" id="q1b" name="answer1" value="hayır">
-            <label for="q1b">b) hayır</label><br>
+            <p>Question 1: Evet Hayır oyunu oynayacağız, birazdan sana 2 soru soracağım sadece bir kere evet veya hayır deme hakkın var. Hazır mısın?</p>
+            <input type="radio" id="q1a" name="answer1" value="başlayalım">
+            <label for="q1a">a) başlayalım</label><br>
+            <input type="radio" id="q1b" name="answer1" value="başlamayalım">
+            <label for="q1b">b) başlamayalım</label><br>
             <input type="radio" id="q1c" name="answer1" value="emin değilim">
             <label for="q1c">c) emin değilim</label><br>
         </div>
