--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiple Choice Questionnaire</title>
+    <title>Evet Hayır oyunu (Riskli)</title>
 </head>
 <body>
     <h1>Multiple Choice Questionnaire</h1>
