--- a/index.html
+++ b/index.html
@@ -33,5 +33,16 @@
         </div>
         <button type="submit">Submit</button>
     </form>
+
+    <!-- GIF and text to be displayed after all questions are answered -->
+    <div id="gifImage" style="display: none;">
+        <img src="your-gif-url.gif" alt="GIF" width="200">
+    </div>
+    <div id="biliyordumText" style="display: none;">
+        <p>Biliyordum</p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
+
