--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Evet Hayır oyunu (Riskli)</title>
 </head>
 <body>
-    <h1>Multiple Choice Questionnaire</h1>
+    <h1>Evet Hayır oyunu</h1>
     <form action="/submit" method="post">
         <div>
             <p>Question 1: Evet Hayır oyunu oynayacağız, birazdan sana 2 soru soracağım sadece bir kere evet veya hayır deme hakkın var. Hazır mısın?</p>
