--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- GIF and text to be displayed after all questions are answered -->
     <div id="gifImage" style="display: none;">
-        <img src="blob:https://github.com/bcfa24da-b186-4ed2-ae73-9c52b3f924dd" alt="GIF" width="200">
+        <img src="fe9546ba-6e12-4a1e-8be2-94d9b13c9cad.gif" alt="GIF" width="200">
     </div>
     <div id="biliyordumText" style="display: none;">
         <p>Biliyordum</p>
